# config-lib

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/include/config/: registry.h  variable.h
src/include/config/validator/: builder.h
src/include/validator/: builder.h
src/lib/: registry.h  variable.h
src/lib/validator/: pipeline.h
